{
  "version": 4,
  "terraform_version": "0.12.0",
  "serial": 5,
  "lineage": "ad087908-7368-6d50-9034-6355af91c96b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:358896902588:security-group/sg-00f88b1145efcbd1d",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-00f88b1145efcbd1d",
            "ingress": [],
            "name": "dev-rds-sg",
            "name_prefix": null,
            "owner_id": "358896902588",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-00cbdf5caae5099ae"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "mysql_inbound_access",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 3306,
            "id": "sgrule-1388201169",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00f88b1145efcbd1d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.rds-sg"
          ]
        }
      ]
    }
  ]
}